--- a/index.html
+++ b/index.html
@@ -261,7 +261,11 @@
         <li data-key="pose"><a>Object Pose Change</a></li>
       </ul>
     </div>
-
+    
+    <p class="has-text-centered is-size-5" style="margin-top: 0.5rem; color: #666;">
+      💡 Click on a tab (e.g., <b>Background Change</b>) multiple times to cycle through all available perturbations.
+    </p>
+    
     <div class="columns is-centered">
       <div class="column is-three-fifths">
         <div class="video-container">
